# kjhjason.com

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  auth.rs  convert-images-to-webp.ps1  cors.json  fly-import-secrets.ps1  fly.toml  package-lock.json  package.json  robots.txt  tailwind.config.js
.github/: dependabot.yml
.github/workflows/: deploy.yml
api/: Cargo.toml  Dockerfile
api/src/: main.rs
api/src/blog/: api.rs  auth.rs  csrf.rs  mod.rs
api/src/constants/: constants.rs
api/src/database/: db.rs
api/src/middleware/: auth.rs  csrf.rs  mod.rs
api/src/model/: auth.rs  base_error.rs  base_msg.rs  blog.rs  checkbox.rs  csrf.rs  index.rs  mod.rs
api/src/security/: auth.rs  csrf.rs  jwt.rs  mod.rs  pw_hasher.rs
api/src/utils/: datetime.rs  io.rs  md.rs  mod.rs  redirect.rs  security.rs
client/: .air.toml  go.mod  main.go  package-lock.json  package.json  tailwind.config.js
client/constants/: constants.go
client/middleware/: auth.go  cache_control.go  content_type.go  csp_nonce.go  csrf.go  hsts.go  logger.go
client/routes/: admin.go  auth.go  general.go  utils.go
client/static/css/: index.css  tailwind.css
client/static/js/: error.js
client/templates/: base.go.tmpl  error.go.tmpl
client/templates/admin/: new_blog.go.tmpl
client/templates/auth/: login.go.tmpl
client/templates/general/: blog.go.tmpl  experiences.go.tmpl  index.go.tmpl  projects.go.tmpl  skills.go.tmpl
dev_scripts/: convert_images_to_webp.py  import_secrets_to_flyio.py  init_project.py
res/logo/: favicon.psd
scripts/: import_secrets_to_flyio.py  init_project.py
seo/: sitemap.xml
src/: main.rs
src/api/: admin.rs  admin_profile.rs  auth.rs  blog.rs  configure.rs  csrf.rs  general.rs  mod.rs
src/client/: admin.rs  auth.rs  configure.rs  general.rs  mod.rs  static_files.rs
src/client/templates/: admin.rs  auth.rs  general.rs  mod.rs
src/constants/: constants.rs  mod.rs
src/database/: db.rs  init.rs  mod.rs
src/errors/: auth.rs  base.rs  blog.rs  crypto.rs  csrf.rs  mod.rs  session.rs
src/middleware/: auth.rs  cache_control.rs  configure.rs  content_type.rs  csp.rs  csrf.rs  errors.rs  host.rs  hsts.rs  mod.rs
src/model/: auth.rs  base_error.rs  blog.rs  blog_preview.rs  blog_response.rs  csrf.rs  login_data.rs  mod.rs  new_blog.rs  projected_blog.rs  update_blog.rs  uploaded_files.rs  user.rs
src/models/: blog.rs  blog_identifier.rs  blog_preview.rs  blog_response.rs  change_password.rs  checkbox.rs  file_info.rs  generated_totp.rs  index.rs  login_data.rs  mod.rs  new_blog.rs  projected_blog.rs  projected_user.rs  remove_2fa.rs  session.rs  setup_2fa.rs  update_blog.rs  uploaded_files.rs  user.rs
src/security/: cf_turnstile.rs  chacha_crypto.rs  csrf.rs  mod.rs  pw_hasher.rs  totp.rs
src/templates/: admin.rs  admin_profile.rs  alerts.rs  auth.rs  error.rs  general.rs  guest.rs  mod.rs
src/utils/: auth.rs  awards.rs  blog.rs  certificates.rs  datetime.rs  experiences.rs  html.rs  io.rs  md.rs  mod.rs  projects.rs  redirect.rs  security.rs  skills.rs  storage.rs  testimonials.rs  validations.rs
static/: index.html
static/css/: styles.css  tailwind.css
static/js/: base.js  blog.js  date.js  gtag.js  login.js  profile.js  twofa.js
templates/: base.html  error.html
templates/admin/: edit_blog.html  new_blog.html  profile.html
templates/auth/: login.html
templates/components/: alert_error.html  alert_success.html  auth_error.html  award.html  blog_input_div.html  certificate.html  cookie_banner.html  disable_2fa.html  enable_2fa.html  experience.html  footer.html  go_to_top_btn.html  guest_items.html  locked.html  nav.html  seo_tags.html  skill.html  tags.html  timeline_item.html  unlocked.html
templates/general/: awards.html  blog.html  blog_content.html  blog_post.html  blogs.html  certificates.html  experiences.html  index.html  projects.html  resume.html  skills.html  testimonials.html
