[package]
name = "kjhjason-blog"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
tokio = { version = "1.39.1", features = ["full"] }
futures = "0.3.30"
futures-util = "0.3.30"
mongodb = "3.0.1"
bson = { version = "2.11.0", features = ["chrono-0_4"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_bytes = "0.11.15"
env_logger = "0.11.5"
log = "0.4.22"
derive_more = "0.99.18"
thiserror = "1.0.63"
chrono = { version = "0.4.38", features = ["serde"] }
image = "0.25.2"
mime = "0.3.16"
fastuuid = "0.3.0"
dotenv = "0.15.0"
regex = "1.10.5"
once_cell = "1.19.0"
pulldown-cmark = "0.11.0"
askama = "0.12.1"
minify-html = "0.15.0"
aws-config = { version = "1.5.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.42.0"
hex = "0.4.3"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
hmac-serialiser = "0.3.1"
totp-rs = { version = "5.6.0", features = ["qr"] }
rand = "0.8.5"
base64 = "0.22.1"
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1.10.0", features = ["v4"] }
