[package]
name = "kjhjason-blog"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3.31"
futures-util = "0.3.30"
mongodb = "3.1.1"
bson = { version = "2.13.0", features = ["chrono-0_4"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_bytes = "0.11.15"
env_logger = "0.11.5"
log = "0.4.22"
derive_more = { version = "1.0.0", features = [ "display", "error" ] }
thiserror = "2.0.8"
chrono = { version = "0.4.39", features = ["serde"] }
image = "0.25.5"
mime = "0.3.16"
fastuuid = "0.3.0"
dotenv = "0.15.0"
regex = "1.11.1"
once_cell = "1.20.2"
pulldown-cmark = "0.12.2"
askama = "0.12.1"
minify-html = "0.15.0"
aws-config = { version = "1.5.11", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.66.0"
hex = "0.4.3"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
hmac-serialiser = "0.3.1"
totp-rs = { version = "5.6.0", features = ["qr"] }
rand = "0.8.5"
base64 = "0.22.1"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1.11.0", features = ["v4"] }
