[package]
name = "kjhjason-blog"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
tokio = { version = "1.43.1", features = ["full"] }
futures = "0.3.31"
futures-util = "0.3.30"
mongodb = "3.2.1"
bson = { version = "2.13.0", features = ["chrono-0_4"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_bytes = "0.11.15"
env_logger = "0.11.6"
log = "0.4.27"
derive_more = { version = "2.0.1", features = [ "display", "error" ] }
thiserror = "2.0.11"
chrono = { version = "0.4.39", features = ["serde"] }
image = "0.25.5"
mime = "0.3.16"
fastuuid = "0.3.0"
dotenv = "0.15.0"
regex = "1.11.1"
once_cell = "1.20.3"
pulldown-cmark = "0.13.0"
askama = "0.12.1"
minify-html = "0.15.0"
aws-config = { version = "1.5.16", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.78.0"
hex = "0.4.3"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
hmac-serialiser = "0.3.1"
totp-rs = { version = "5.6.0", features = ["qr"] }
rand = "0.9.0"
base64 = "0.22.1"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1.16.0", features = ["v4"] }
