[package]
name = "blog-api"
version = "0.1.0"
edition = "2021"

[lints.rust]
unused_assignments = "allow"

[dependencies]
actix-web = "4.7.0"
actix-files = "0.6.6"
actix-cors = "0.7.0"
actix-multipart = "0.6.2"
mongodb = "2.8.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
bson = "2.11.0"
env_logger = "0.11.3"
log = "0.4.21"
derive_more = "0.99.17"
chrono = "0.4.38"
image = "0.25.1"
mime = "0.3.16"
fastuuid = "0.3.0"
dotenv = "0.15.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.35.0"
tokio = { version = "1.38.0", features = ["full"] }
futures-util = "0.3.30"
pulldown-cmark = "0.11.0"
jsonwebtoken = "9.3.0"
hex = "0.4.3"
argon2 = "0.5.3"
rand = "0.8.5"
base64 = "0.22.1"
futures = "0.3.30"
